--- a/styles.css
+++ b/styles.css
@@ -121,8 +121,21 @@ img{
 }
 
 
-
+/* dijital Clock */
 .clock{
   font-size: 20px;
   font-weight: bold;
+}
+.clock-btn{
+  font-size: 20px;
+  border: none;
+  background-color: rgb(22 77 133);
+  color: white;
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.clock-btn:hover{
+  box-shadow: 0px 0px 5px 1px blue;
+  cursor: pointer;
 }
