--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,7 @@ img{
   width: 100%;
 }
 .overlay{
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
   background-color: #00000054;
@@ -232,4 +233,24 @@ img{
 .light-mode{
   background-color: #fff;
  color: black
+}
+
+
+/* network Status */
+.connection-message{
+  /* padding: 10px; */
+  /* border: solid white 1px; */
+}
+.online, .offline{
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  padding: 1rem;
+  font-size: 1.5rem;
+  font-weight: bold;
+  background-color: green;
+}
+
+.offline{
+  background-color: red;
 }
